// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para <GifExpertApp /> 01 Debe de renderizarse correctamente! 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__bounce animate__delay_2s"
  >
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`Pruebas para <GifExpertApp /> 02 Debe de mostrar una lista de categorias! 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__bounce animate__delay_2s"
  >
    GifExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
      key="0"
    />
    <GifGrid
      category="Superman"
      key="1"
    />
  </ol>
</Fragment>
`;
